  pal_blending.[ch], ui.c, videomode.[ch], sdl/video_gl.c, sdl/video.sw.c,
  sdl/video.c, DOC/USAGE, amiga/makefile, dc/Makefile.dc,
  win32/msc/Makefile: New module, artifact.c, which manages settings of all
  artifacting modes. Artifacting modes are now stored independently for PAL
  and NTSC modes, and set according to the current TV mode setting.


2013-04-15  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_pal.[ch], colours.[ch], configure.ac, pal_blending.[ch], platform.h,
  ui.c, sdl/palette.[ch], sdl/video_gl.[ch], sdl/video_sw.[ch], sdl.video.[ch]:
  Added accurate emulation of PAL delay line (PAL blending).


2013-04-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.[ch], gtia.c, ui.c: Improve the existing PAL blending implementation,
  which worked only on lines in GTIA mode 9 and was erroneously called
  "GTIA11_DELAY". Previously it only blended lines placed below GTIA 11 lines,
  now it works on all grasycale pixels. PAL blending now can be switched
  on/off - see "Display settings->TV effect" (renamed from "NTSC artifacting
  quality", as this option is no longer NTSC-specific).


2013-04-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_pal.c: More accurate emulation of PAL colours based on analysis of
  oscillograms of PAL GTIA output.

* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".

* memory.h: Fix gcc 4.7.2 -Wstrict-aliasing warnings.

* cartridge.[ch], ui.c, android/jni/jni.c: Avoid compiler warnings by moving
  the table of cartridge names to jni.c. The default target doesn't need that
  table anyway, it only needs the names.

* cartridge.c: Fix uninitialised variable which could result in unnecessary
  bank switching.


2013-03-21  Petr Stehlik <pstehlik@sophics.cz>
* configure.c, ui.c, atari_rpi.c, gles/video.c: committing new support
  for Raspberry Pi made by Andrey Dj

* DOC/README.RPI, DOC/BUILD.RPI: documentation added

